--- a/app/public/index.html
+++ b/app/public/index.html
@@ -23,7 +23,7 @@
 	<link href="assets/css/styles.css" rel="stylesheet" media="screen">
   </head>
   <body>
-	<header class="navbar navbar-fixed-top">
+	<header class="navbar navbar-static-top">
 		<div class="container">
 			<div class="row">
 				<div class="navbar-header col-sm-12 col-md-12">
@@ -33,9 +33,11 @@
 			</div>
 		</div>
 	</header>
-		<canvas id="bubble_spool-canvas" resize="true">
+	<div id="bubble_spool">
+		<canvas id="bubble_spool-canvas" resize="true" keepalive="true">
 			Old geezer. Get some 21st century browser!
 		</canvas>
+	</div>
 
 
 	<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
