--- a/app/public/index.html
+++ b/app/public/index.html
@@ -44,17 +44,16 @@
 		<div class="row">
 			<div class="col-lg-3 col-md-3 col-sm-4">
 				<div id="countdown" class="progress progress-striped active marged-y">
-				  	<div class="progress-bar progress-bar-info" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: 40%">
-				    	<span class="sr-only"></span>
+				  	<div class="progress-bar progress-bar-info" role="progressbar" aria-valuemin="0" aria-valuemax="100" style="width: 0%">
 					</div>
 				</div>
 				<div class="marged-y well well-lg">
 					<form id="text_form" role="form">
-							<textarea id="text_input" class="form-control" rows="3" placeholder="Your random blahblah."></textarea>
-							<button type="submit" class="btn btn-primary btn-lg btn-block marged-y">Draw Text</button>
+							<textarea id="text_input" class="form-control" rows="3" placeholder="Your random blahblah." tabindex="1"></textarea>
+							<button type="submit" class="btn btn-primary btn-lg btn-block marged-y" tabindex="2">Draw Text</button>
 					</form>
 
-					<button id="clear_button" type="button" class="btn btn-default btn-lg btn-block marged-y" style="margin-bottom: 0px">Clear All</button>
+					<button id="clear_button" type="button" class="btn btn-default btn-lg btn-block marged-y" style="margin-bottom: 0px" tabindex="3">Clear All</button>
 				</div>
 			</div>
 			<div class="col-lg-9 col-md-9 col-sm-8">
