--- a/app/public/index.html
+++ b/app/public/index.html
@@ -49,7 +49,7 @@
 				</div>
 				<div class="marged-y well well-lg">
 					<form id="text_form" role="form">
-							<textarea id="text_input" class="form-control" rows="3" placeholder="Your random blahblah." tabindex="1"></textarea>
+							<textarea id="text_input" class="form-control" rows="3" placeholder="Enter your random blahblah here." tabindex="1"></textarea>
 							<button type="submit" class="btn btn-primary btn-lg btn-block marged-y" tabindex="2">Draw Text</button>
 					</form>
 
