--- a/app/public/index.html
+++ b/app/public/index.html
@@ -55,6 +55,8 @@
 
 					<button id="clear_button" type="button" class="btn btn-default btn-lg btn-block marged-y" style="margin-bottom: 0px" tabindex="3">Clear All</button>
 				</div>
+
+				<input id="small_bubble_offset_input" class="form-control marged-y" value="0.20" type="number" name="points" step="0.01" min="0">
 			</div>
 			<div class="col-lg-9 col-md-9 col-sm-8">
 				<div id="bubble_preview" class="marged-y">
